{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "LocalPlayer",
            "id": "eade0b78-2ece-444a-9186-c739fc7dc68c",
            "actions": [],
            "bindings": []
        },
        {
            "name": "GlobalInput",
            "id": "79e5acaa-6504-494b-8c4f-c5f9d0760b93",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "347405c3-862f-4275-bd94-7ef24008c569",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "546f0509-b692-49ca-b5ea-9687c510fe94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Additional",
                    "type": "Button",
                    "id": "68bdbb79-3b53-4cf0-b4bf-7a139ef7ec6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleClick",
                    "type": "Button",
                    "id": "7e5ec070-d07b-4889-9ec0-929b75d8fb75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "795a5018-862d-44d7-ba9f-338bee134638",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraControl",
                    "type": "Value",
                    "id": "1a5e7b2a-0b48-49b2-aaf8-8c8862a114d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9915b61-47da-4caf-9cfb-9ff905ae2b0f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e51be93-836b-484b-bed5-2bb7e6c5e3fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.4,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cd5a1b3-cbf6-461a-bbb2-8ddc5e49ae47",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Additional",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f56c7f4-f64e-482f-ba23-98d839081ebc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "MultiTap(tapTime=0.2,tapDelay=0.3,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "163a8f8f-540e-43ef-9fbd-0476109df63e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "4743c7ec-b3cd-48e1-9157-889024d4bd8d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b9363f70-2969-4966-b479-133237df98d3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b0747f77-ef32-4129-8160-6d9dbb4d73bf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "308128a2-8706-4aae-9800-69ad873b0253",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "20473e9f-082c-4f24-a91e-0ffaf5717c07",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}